--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <body>
         <script src="js/three.js"></script>
         <script src="js/controls/OrbitControls.js"></script>
+        <script src="js/data/treelets.js"></script>
         <script src="js/draw.js"></script>
     </body>
 </html>
