--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!doctype html>
 
 <html>
-    <head>
-    <meta charset="utf-8">
-    <title>Treelet Viewer</title>
-    <style>
+<head>
+
+  <meta charset="utf-8">
+  <title>Treelet Viewer</title>
+  <style>
     body { margin: 0; }
-    canvas { width: 100%; height: 100% }
-    </style>
-    </head>
-    <body>
-        <script src="js/three.js"></script>
-        <script src="js/controls/OrbitControls.js"></script>
-        <script src="js/data/treelets.js"></script>
-        <script src="js/draw.js"></script>
-    </body>
+    canvas { width: 100%; height: 100%; display:block; }
+  </style>
+
+  <link rel="stylesheet" href="css/style.css" />
+
+</head>
+<body>
+
+  <div id="info">
+    <a id="back" href="#">
+      <img src="img/back.svg" width="30px" />
+    </a>
+  </div>
+
+  <script src="js/three.js"></script>
+  <script src="js/controls/OrbitControls.js"></script>
+  <script src="js/data/treelets.js"></script>
+  <script src="js/draw.js"></script>
+
+</body>
 </html>
