--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 
   <div id="info">
     <a id="back" href="#">
-      <img src="img/back.svg" width="30px" />
+      <img src="img/back.svg" />
     </a>
+
+    <span id="breadcrumbs"></span>
+
   </div>
 
   <script src="js/three.js"></script>
