Minor changes to the colors.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
 <body>
 
   <div id="info">
-    <a id="back" href="#">
-      <img src="img/back.svg" />
-    </a>
-
+    <a id="back" href="#"><img src="img/back.svg" /></a>
     <span id="breadcrumbs"></span>
 
   </div>
