--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Treelet Viewer</title>
   <style>
     body { margin: 0; }
-    canvas { width: 100%; height: 100%; display:block; }
+    canvas { width: 100%; height: 100%; display:block; z-index:0; }
   </style>
 
   <link rel="stylesheet" href="css/style.css" />
@@ -18,6 +18,7 @@
   <div id="info">
     <a id="back" href="#"><img src="img/back.svg" /></a>
     <span id="breadcrumbs"></span>
+    <input id="show-internals" type="checkbox" />
 
   </div>
 
