--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
   <div id="info">
     <a id="back" href="#"><img src="img/back.svg" /></a>
     <span id="breadcrumbs"></span>
-    <input id="show-internals" type="checkbox" />
+    <br/>
+    
+    <div class="onoffswitch" id="show-internals-switch">
+      <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="show-internals">
+      <label class="onoffswitch-label" for="myonoffswitch"></label>
+    </div>
 
   </div>
 
