--- a/index.html
+++ b/index.html
@@ -15,23 +15,11 @@
 </head>
 <body>
 
-  <div id="info">
-    <a id="back" href="#"><img src="img/back.svg" /></a>
-    <span id="breadcrumbs"></span>
-
-    <div id="show-internals-switch">
-        Show Internal BVH Nodes
-        <div class="onoffswitch">
-          <input type="checkbox" name="show-internals" class="onoffswitch-checkbox" id="show-internals">
-          <label class="onoffswitch-label" for="show-internals"></label>
-        </div>
-    </div>
-
   </div>
 
   <script src="js/three.js"></script>
   <script src="js/controls/OrbitControls.js"></script>
-  <script src="js/data/treelets.js"></script>
+  <script src="js/data/treelets_icosphere.js"></script>
   <script src="js/draw.js"></script>
 
 </body>
