--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
 </head>
 <body>
+  <p id="treelet_info_id"></p>
+  <p id="treelet_info_level"></p>
 
-  </div>
 
   <script src="js/three.js"></script>
   <script src="js/controls/OrbitControls.js"></script>
