updates to initial camera position and far draw distance

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
   <script src="js/three.js"></script>
   <script src="js/controls/OrbitControls.js"></script>
-  <script src="js/data/treelets_icosphere.js"></script>
+  <script src="js/data/treelets_killeroo-1000.js"></script>
+  <!-- <script src="js/data/treelets_icosphere.js"></script> -->
   <script src="js/draw.js"></script>
 
 </body>
