made changes tovisualbvh to accept new json format

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
   <script src="js/three.js"></script>
   <script src="js/controls/OrbitControls.js"></script>
-  <script src="js/data/killeroo_bvh_node_dump.js"></script>
-  <script src="js/data/killeroo_treelet_node_map.js"></script>
+  <!-- <script src="js/data/killeroo_bvh_node_dump.js"></script> -->
+  <!-- <script src="js/data/killeroo_treelet_node_map.js"></script> -->
+  <script src="js/data/treelet_node.js"></script>
   <script src="js/draw.js"></script>
 
 </body>
