--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script src="js/controls/OrbitControls.js"></script>
   <!-- <script src="js/data/killeroo_bvh_node_dump.js"></script> -->
   <!-- <script src="js/data/killeroo_treelet_node_map.js"></script> -->
-  <script src="js/data/treelet_node.js"></script>
+  <script src="js/data/moana_treelet_node.js"></script>
   <script src="js/draw.js"></script>
 
 </body>
